--- a/bot/.env.example
+++ b/bot/.env.example
@@ -2,3 +2,6 @@ BOT_TOKEN=your-bot_token
 SUPABASE_URL=your-supabase_url
 SUPABASE_KEY="your-supabase_key"
 XAI_API_KEY="your-xai_api_key"
+
+# Google Gemini API
+GEMINI_API_KEY="your-gemini_api_key"
