--- a/bot/package.json
+++ b/bot/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "-": "^0.0.1",
+    "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/node": "^22.10.5",
     "cross-fetch": "^4.1.0",
