--- a/bot/package.json
+++ b/bot/package.json
@@ -7,25 +7,26 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc -w --skipLibCheck",
     "dev": "nodemon --exec ts-node -- ./src/bot.ts",
-    "build": "tsc",
+    "build": "tsc --skipLibCheck",
     "start": "node dist/src/bot.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "-": "^0.0.1",
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^22.10.5",
     "cross-fetch": "^4.1.0",
     "dotenv": "^16.4.7",
     "grammy": "^1.34.0",
     "groq-sdk": "^0.9.1",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.0.0"
+  },
+  "devDependencies": {
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^18.19.0",
     "nodemon": "^3.1.9",
-    "openai": "^4.77.3",
-    "save-dev": "^0.0.1-security"
+    "typescript": "^4.9.5",
+    "ts-node": "^10.9.2"
   }
 }
