--- a/.gitignore
+++ b/.gitignore
@@ -11,45 +11,27 @@ yarn.lock
 # Build output
 dist/
 build/
-
-# Logs
-logs/
-*.log
-
-# IDE
-.vscode/
-.idea/
-
-# System Files
-.DS_Store
-Thumbs.db
-
-# TypeScript
 *.tsbuildinfo
 
-!.env.example
-
-# Build output
-dist/
-build/
-*.tsbuildinfo
-
-# Logs
+# Logs and debugging
 logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+debug.log
+console.log
+output.log
+*.debug
+debug/
 
-# IDE - VSCode
+# IDE
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-# IDE - JetBrains
 .idea/
 *.iml
 *.iws
@@ -58,24 +40,26 @@ lerna-debug.log*
 # System Files
 .DS_Store
 Thumbs.db
-
-# Test coverage
-coverage/
-
-# Temporary files
 *.swp
 *.swo
 *~
+
+# Test coverage
+coverage/
 
 # PM2
 .pm2/
 ecosystem.config.js.bak
 
-# TypeScript cache
-*.tsbuildinfo
-
-# Optional npm cache directory
+# Cache
 .npm
-
-# Optional eslint cache
 .eslintcache
+
+# Security - never commit these!
+*.key
+*.pem
+*.cert
+*.password
+*secret*
+*token*
+credentials.json
