--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,5 +1,5 @@
-BOT_TOKEN=your-bot_token
-SUPABASE_URL=your-supabase_url
+BOT_TOKEN="your-bot_token"
+SUPABASE_URL="your-supabase_url"
 SUPABASE_KEY="your-supabase_key"
 XAI_API_KEY="your-xai_api_key"
 
